<resources>
    <string name="app_name">1lab</string>

    <string name="ll_sp_title1">Спорт</string>

    <string name="tv_sp_title1">Олимпиада</string>
    <string name="tv_sp_desc1">Олимпиада 2022 закончилась</string>

    <string name="tv_sp_title2">Бег</string>
    <string name="tv_sp_desc2">Бегун упал</string>

    <string name="tv_tr_last1">Весь список (20)</string>

    <!---Student test results-->

    <string name="ll_tr_title1">Путешествия</string>

    <string name="tv_tr_title1">Турция</string>
    <string name="tv_tr_desc1">да да</string>

    <string name="tv_tr_title2">Греция</string>
    <string name="tv_tr_desc2">нет нет</string>
    <string name="tv_tr_last2">Весь список (20)</string>

</resources>